tests/files/flow_controller_tests/should_run/058.cmdr
x = -23.5;
print abs(x);