tests/files/flow_controller_tests/should_fail/031.cmdr
x = true;
print abs(x);